crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__operations__push_calldatacopy_out_of_bounds.snap
---
source: crates/dora-compiler/src/dora/tests/operations.rs
expression: op
---
module {
  func.func private @dora_fn_nop()
  func.func private @dora_fn_tracing(!llvm.ptr, i8, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_is_static(!llvm.ptr) -> i8
  func.func private @dora_fn_exp(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_calldata_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_data_load(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_data_section(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_data_section_size(!llvm.ptr) -> i64
  func.func private @dora_fn_data_section_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_chainid(!llvm.ptr) -> i64
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gaslimit_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_memory_ptr(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_memory_size(!llvm.ptr) -> i64
  func.func private @dora_fn_code_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_eofcreate(!llvm.ptr, i8, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returncontract(!llvm.ptr, i8, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_call(!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_extcall_addr_validate(!llvm.ptr, !llvm.ptr) -> i8
  func.func private @dora_fn_extcall(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_returndata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_tload(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_tstore(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_func_stack_push(!llvm.ptr, i64, i64) -> i8
  func.func private @dora_fn_func_stack_pop(!llvm.ptr) -> i64
  func.func private @dora_fn_func_stack_grow(!llvm.ptr)
  func.func private @dora_fn_set_resume(!llvm.ptr, i32)
  func.func private @dora_fn_get_resume(!llvm.ptr) -> i32
  func.func private @op55(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr, %arg4: !llvm.ptr) -> i8 {
    cf.br ^bb3
  ^bb1(%0: i8):  // 10 preds: ^bb3, ^bb4, ^bb6, ^bb7, ^bb11, ^bb12, ^bb13, ^bb14, ^bb17, ^bb18
    %c0_i64 = arith.constant 0 : i64
    %1 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64, %c0_i64, %1, %0) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %0 : i8
  ^bb2(%2: i8):  // no predecessors
    return %2 : i8
  ^bb3:  // pred: ^bb0
    %3 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %4 = arith.cmpi uge, %3, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %4, ^bb5, ^bb1(%c80_i8 : i8)
  ^bb4:  // pred: ^bb5
    %c1024_i64 = arith.constant 1024 : i64
    %5 = llvm.load %arg3 : !llvm.ptr -> i64
    %c-3_i64 = arith.constant -3 : i64
    %6 = arith.addi %5, %c-3_i64 : i64
    llvm.store %6, %arg3 : i64, !llvm.ptr
    %c3_i64_0 = arith.constant 3 : i64
    %7 = arith.cmpi ult, %5, %c3_i64_0 : i64
    %c91_i8 = arith.constant 91 : i8
    cf.cond_br %7, ^bb1(%c91_i8 : i8), ^bb6
  ^bb5:  // pred: ^bb3
    %8 = arith.subi %3, %c3_i64 : i64
    llvm.store %8, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb6:  // pred: ^bb4
    %9 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %10 = llvm.getelementptr %9[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %11 = llvm.load %10 : !llvm.ptr -> i256
    llvm.store %10, %arg4 : !llvm.ptr, !llvm.ptr
    %12 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %13 = llvm.getelementptr %12[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %14 = llvm.load %13 : !llvm.ptr -> i256
    llvm.store %13, %arg4 : !llvm.ptr, !llvm.ptr
    %15 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %16 = llvm.getelementptr %15[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %17 = llvm.load %16 : !llvm.ptr -> i256
    llvm.store %16, %arg4 : !llvm.ptr, !llvm.ptr
    %c18446744073709551615_i256 = arith.constant 18446744073709551615 : i256
    %18 = arith.cmpi ugt, %17, %c18446744073709551615_i256 : i256
    %c84_i8 = arith.constant 84 : i8
    cf.cond_br %18, ^bb1(%c84_i8 : i8), ^bb7
  ^bb7:  // pred: ^bb6
    %19 = arith.trunci %17 : i256 to i64
    %c0_i64_1 = arith.constant 0 : i64
    %20 = arith.cmpi slt, %19, %c0_i64_1 : i64
    %c84_i8_2 = arith.constant 84 : i8
    cf.cond_br %20, ^bb1(%c84_i8_2 : i8), ^bb8
  ^bb8:  // pred: ^bb7
    %c0_i64_3 = arith.constant 0 : i64
    %21 = arith.cmpi ne, %19, %c0_i64_3 : i64
    cf.cond_br %21, ^bb11, ^bb9
  ^bb9:  // 2 preds: ^bb8, ^bb16
    %22 = arith.trunci %11 : i256 to i64
    %c1_i256 = arith.constant 1 : i256
    %23 = llvm.alloca %c1_i256 x i256 : (i256) -> !llvm.ptr
    llvm.store %14, %23 {alignment = 1 : i64} : i256, !llvm.ptr
    call @dora_fn_calldata_copy(%arg0, %22, %23, %19) : (!llvm.ptr, i64, !llvm.ptr, i64) -> ()
    cf.br ^bb10
  ^bb10:  // pred: ^bb9
    %c0_i8 = arith.constant 0 : i8
    return %c0_i8 : i8
  ^bb11:  // pred: ^bb8
    %c31_i64 = arith.constant 31 : i64
    %c32_i64 = arith.constant 32 : i64
    %24 = arith.addi %19, %c31_i64 : i64
    %25 = arith.divui %24, %c32_i64 : i64
    %c3_i64_4 = arith.constant 3 : i64
    %26 = arith.muli %25, %c3_i64_4 : i64
    %27 = llvm.load %arg1 : !llvm.ptr -> i64
    %28 = arith.cmpi ult, %27, %26 : i64
    scf.if %28 {
    } else {
      %57 = arith.subi %27, %26 : i64
      llvm.store %57, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_5 = arith.constant 80 : i8
    cf.cond_br %28, ^bb1(%c80_i8_5 : i8), ^bb12
  ^bb12:  // pred: ^bb11
    %c18446744073709551615_i256_6 = arith.constant 18446744073709551615 : i256
    %29 = arith.cmpi ugt, %11, %c18446744073709551615_i256_6 : i256
    %c84_i8_7 = arith.constant 84 : i8
    cf.cond_br %29, ^bb1(%c84_i8_7 : i8), ^bb13
  ^bb13:  // pred: ^bb12
    %30 = arith.trunci %11 : i256 to i64
    %c0_i64_8 = arith.constant 0 : i64
    %31 = arith.cmpi slt, %30, %c0_i64_8 : i64
    %c84_i8_9 = arith.constant 84 : i8
    cf.cond_br %31, ^bb1(%c84_i8_9 : i8), ^bb14
  ^bb14:  // pred: ^bb13
    %32 = arith.addi %30, %19 : i64
    %c0_i64_10 = arith.constant 0 : i64
    %33 = arith.cmpi slt, %32, %c0_i64_10 : i64
    %c84_i8_11 = arith.constant 84 : i8
    cf.cond_br %33, ^bb1(%c84_i8_11 : i8), ^bb15
  ^bb15:  // pred: ^bb14
    %c31_i64_12 = arith.constant 31 : i64
    %c32_i64_13 = arith.constant 32 : i64
    %34 = arith.addi %32, %c31_i64_12 : i64
    %35 = arith.divui %34, %c32_i64_13 : i64
    %c32_i64_14 = arith.constant 32 : i64
    %36 = arith.muli %35, %c32_i64_14 : i64
    %37 = call @dora_fn_memory_size(%arg0) : (!llvm.ptr) -> i64
    %c31_i64_15 = arith.constant 31 : i64
    %c32_i64_16 = arith.constant 32 : i64
    %38 = arith.addi %37, %c31_i64_15 : i64
    %39 = arith.divui %38, %c32_i64_16 : i64
    %40 = arith.muli %39, %c32_i64_14 : i64
    %41 = arith.cmpi ult, %40, %36 : i64
    cf.cond_br %41, ^bb17, ^bb16
  ^bb16:  // 2 preds: ^bb15, ^bb19
    cf.br ^bb9
  ^bb17:  // pred: ^bb15
    %c3_i64_17 = arith.constant 3 : i64
    %c512_i64 = arith.constant 512 : i64
    %42 = arith.muli %39, %39 : i64
    %43 = arith.divui %42, %c512_i64 : i64
    %44 = arith.muli %39, %c3_i64_17 : i64
    %45 = arith.addi %43, %44 : i64
    %c3_i64_18 = arith.constant 3 : i64
    %c512_i64_19 = arith.constant 512 : i64
    %46 = arith.muli %35, %35 : i64
    %47 = arith.divui %46, %c512_i64_19 : i64
    %48 = arith.muli %35, %c3_i64_18 : i64
    %49 = arith.addi %47, %48 : i64
    %50 = arith.subi %49, %45 : i64
    %51 = llvm.load %arg1 : !llvm.ptr -> i64
    %52 = arith.cmpi ult, %51, %50 : i64
    scf.if %52 {
    } else {
      %57 = arith.subi %51, %50 : i64
      llvm.store %57, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_20 = arith.constant 80 : i8
    cf.cond_br %52, ^bb1(%c80_i8_20 : i8), ^bb18
  ^bb18:  // pred: ^bb17
    %53 = call @dora_fn_extend_memory(%arg0, %36) : (!llvm.ptr, i64) -> !llvm.ptr
    %54 = llvm.getelementptr %53[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %55 = llvm.load %54 : !llvm.ptr -> i8
    %c0_i8_21 = arith.constant 0 : i8
    %56 = arith.cmpi ne, %55, %c0_i8_21 : i8
    cf.cond_br %56, ^bb1(%55 : i8), ^bb19
  ^bb19:  // pred: ^bb18
    cf.br ^bb16
  }
  func.func private @op95(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr, %arg4: !llvm.ptr) -> i8 {
    cf.br ^bb3
  ^bb1(%0: i8):  // 2 preds: ^bb3, ^bb4
    %c0_i64 = arith.constant 0 : i64
    %1 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64, %c0_i64, %1, %0) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %0 : i8
  ^bb2(%2: i8):  // no predecessors
    return %2 : i8
  ^bb3:  // pred: ^bb0
    %3 = llvm.load %arg1 : !llvm.ptr -> i64
    %c2_i64 = arith.constant 2 : i64
    call @dora_fn_nop() : () -> ()
    %4 = arith.cmpi uge, %3, %c2_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %4, ^bb5, ^bb1(%c80_i8 : i8)
  ^bb4:  // pred: ^bb5
    %c1024_i64 = arith.constant 1024 : i64
    %5 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %6 = arith.addi %5, %c1_i64 : i64
    llvm.store %6, %arg3 : i64, !llvm.ptr
    %7 = arith.cmpi ult, %c1024_i64, %6 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %7, ^bb1(%c92_i8 : i8), ^bb6
  ^bb5:  // pred: ^bb3
    %8 = arith.subi %3, %c2_i64 : i64
    llvm.store %8, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb6:  // pred: ^bb4
    %c0_i256 = arith.constant 0 : i256
    %9 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    llvm.store %c0_i256, %9 : i256, !llvm.ptr
    %10 = llvm.getelementptr %9[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %10, %arg4 : !llvm.ptr, !llvm.ptr
    cf.br ^bb7
  ^bb7:  // pred: ^bb6
    %c0_i8 = arith.constant 0 : i8
    return %c0_i8 : i8
  }
  func.func public @call(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr) -> i8 attributes {llvm.emit_c_interface} {
    %c0_i64 = arith.constant 0 : i64
    %0 = llvm.alloca %c0_i64 x !llvm.ptr : (i64) -> !llvm.ptr
    llvm.store %arg2, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb10
  ^bb1(%1: i8):  // 7 preds: ^bb2, ^bb6, ^bb7, ^bb8, ^bb11, ^bb13, ^bb14
    %c0_i64_0 = arith.constant 0 : i64
    %2 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_0, %c0_i64_0, %2, %1) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %1 : i8
  ^bb2(%3: i256):  // no predecessors
    %c89_i8 = arith.constant 89 : i8
    cf.switch %3 : i256, [
      default: ^bb1(%c89_i8 : i8)
    ]
  ^bb3(%4: i8):  // 3 preds: ^bb9, ^bb10, ^bb16
    return %4 : i8
  ^bb4(%5: i32):  // no predecessors
    llvm.unreachable
  ^bb5:  // no predecessors
    llvm.unreachable
  ^bb6:  // pred: ^bb10
    %6 = call @op95(%arg0, %arg1, %arg2, %arg3, %0) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr) -> i8
    %7 = arith.cmpi ne, %6, %c0_i8_3 : i8
    cf.cond_br %7, ^bb1(%6 : i8), ^bb7
  ^bb7:  // pred: ^bb6
    %8 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %9 = arith.cmpi uge, %8, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %9, ^bb12, ^bb1(%c80_i8 : i8)
  ^bb8:  // pred: ^bb13
    %10 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64_1 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %11 = arith.cmpi uge, %10, %c3_i64_1 : i64
    %c80_i8_2 = arith.constant 80 : i8
    cf.cond_br %11, ^bb15, ^bb1(%c80_i8_2 : i8)
  ^bb9:  // pred: ^bb16
    %12 = call @op55(%arg0, %arg1, %arg2, %arg3, %0) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr) -> i8
    %13 = arith.cmpi ne, %12, %c0_i8_3 : i8
    cf.cond_br %13, ^bb3(%12 : i8), ^bb17
  ^bb10:  // pred: ^bb0
    %c0_i8 = arith.constant 0 : i8
    %c0_i8_3 = arith.constant 0 : i8
    %14 = arith.cmpi ne, %c0_i8, %c0_i8_3 : i8
    cf.cond_br %14, ^bb3(%c0_i8 : i8), ^bb6
  ^bb11:  // pred: ^bb12
    %c1024_i64 = arith.constant 1024 : i64
    %15 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %16 = arith.addi %15, %c1_i64 : i64
    llvm.store %16, %arg3 : i64, !llvm.ptr
    %17 = arith.cmpi ult, %c1024_i64, %16 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %17, ^bb1(%c92_i8 : i8), ^bb13
  ^bb12:  // pred: ^bb7
    %18 = arith.subi %8, %c3_i64 : i64
    llvm.store %18, %arg1 : i64, !llvm.ptr
    cf.br ^bb11
  ^bb13:  // pred: ^bb11
    %c100_i256 = arith.constant 100 : i256
    %19 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c100_i256, %19 : i256, !llvm.ptr
    %20 = llvm.getelementptr %19[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %20, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_4 = arith.constant 0 : i8
    %21 = arith.cmpi ne, %c0_i8_4, %c0_i8_3 : i8
    cf.cond_br %21, ^bb1(%c0_i8_4 : i8), ^bb8
  ^bb14:  // pred: ^bb15
    %c1024_i64_5 = arith.constant 1024 : i64
    %22 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64_6 = arith.constant 1 : i64
    %23 = arith.addi %22, %c1_i64_6 : i64
    llvm.store %23, %arg3 : i64, !llvm.ptr
    %24 = arith.cmpi ult, %c1024_i64_5, %23 : i64
    %c92_i8_7 = arith.constant 92 : i8
    cf.cond_br %24, ^bb1(%c92_i8_7 : i8), ^bb16
  ^bb15:  // pred: ^bb8
    %25 = arith.subi %10, %c3_i64_1 : i64
    llvm.store %25, %arg1 : i64, !llvm.ptr
    cf.br ^bb14
  ^bb16:  // pred: ^bb14
    %c10_i256 = arith.constant 10 : i256
    %26 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c10_i256, %26 : i256, !llvm.ptr
    %27 = llvm.getelementptr %26[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %27, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_8 = arith.constant 0 : i8
    %28 = arith.cmpi ne, %c0_i8_8, %c0_i8_3 : i8
    cf.cond_br %28, ^bb3(%c0_i8_8 : i8), ^bb9
  ^bb17:  // pred: ^bb9
    %c0_i64_9 = arith.constant 0 : i64
    %c2_i8 = arith.constant 2 : i8
    %29 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_9, %c0_i64_9, %29, %c2_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c2_i8 : i8
  }
}
